--- a/src/index.html
+++ b/src/index.html
@@ -6,23 +6,17 @@
     <title>Home Page</title>
   </head>
   <body>
-    <div class="container py-4 px-3 mx-auto">
-      <h1>Home Page</h1>
+    {{> header }}
 
+    <div class="container mx-auto">
       <a
         type="button"
         class="btn btn-primary rounded-pill px-4"
-        href="/second.html"
-        >Second Page</a
-      >
-
-      <a
-        type="button"
-        class="btn btn-success rounded-pill px-4"
-        href="/third.html"
-        >Third Page</a
+        href="/next.html"
+        >Next Page</a
       >
     </div>
+
     <script type="module" src="./js/main.js"></script>
   </body>
 </html>
