--- a/src/next.html
+++ b/src/next.html
@@ -3,19 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Home Page</title>
+    <title>Next Page</title>
   </head>
   <body>
-    <div class="container py-4 px-3 mx-auto">
-      <h1>Second Page</h1>
+    {{> header }}
 
-      <a
-        type="button"
-        class="btn btn-primary rounded-pill px-4"
-        href="/third.html"
-        >Third Page</a
-      >
-
+    <div class="container mx-auto">
       <a type="button" class="btn btn-success rounded-pill px-4" href="/"
         >Home Page</a
       >
