--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,33 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="h-full">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Home Page</title>
   </head>
-  <body>
-    {{> header }}
-
-    <div class="container mx-auto">
-      <a
-        type="button"
-        class="btn btn-primary rounded-pill px-4"
-        href="/next.html"
-        >Next Page</a
-      >
-    </div>
+  <body class="h-full">
+    <main
+      class="grid min-h-full bg-gray-100 place-items-center px-6 py-24 sm:py-32 lg:px-8"
+    >
+      <div class="text-center">
+        <h1
+          class="mt-4 text-3xl font-bold tracking-tight text-gray-900 sm:text-5xl"
+        >
+          Hello 👋
+        </h1>
+        <!-- example-partial -->
+        {{> example-partial }}
+        <!-- End of example-partial -->
+        <div class="mt-10 flex items-center justify-center gap-x-6">
+          <a
+            href="/next.html"
+            class="rounded-full bg-indigo-600 px-5 py-2.5 text-sm font-semibold text-white shadow-xl hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white"
+          >
+            Go to next page
+          </a>
+        </div>
+      </div>
+    </main>
 
     <script type="module" src="./js/main.js"></script>
   </body>
