--- a/src/next.html
+++ b/src/next.html
@@ -1,18 +1,34 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="h-full">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Next Page</title>
   </head>
-  <body>
-    {{> header }}
+  <body class="h-full">
+    <main
+      class="grid min-h-full bg-gray-100 place-items-center px-6 py-24 sm:py-32 lg:px-8"
+    >
+      <div class="text-center">
+        <h1
+          class="mt-4 text-3xl font-bold tracking-tight custom-class sm:text-5xl"
+        >
+          This uses <code>.custom-class</code>
+        </h1>
+        <!-- example-partial -->
+        {{> example-partial }}
+        <!-- End of example-partial -->
+        <div class="mt-10 flex items-center justify-center gap-x-6">
+          <a
+            href="/"
+            class="rounded-full bg-purple-600 px-5 py-2.5 text-sm font-semibold text-white shadow-xl hover:bg-purple-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white"
+          >
+            Back to home page
+          </a>
+        </div>
+      </div>
+    </main>
 
-    <div class="container mx-auto">
-      <a type="button" class="btn btn-success rounded-pill px-4" href="/"
-        >Home Page</a
-      >
-    </div>
     <script type="module" src="./js/main.js"></script>
   </body>
 </html>
