✨ add counter.js as a module
increment counter on click

--- a/src/next.html
+++ b/src/next.html
@@ -25,6 +25,13 @@
           >
             Back to home page
           </a>
+
+          <button
+            type="button"
+            class="count-button text-gray-900 bg-white border border-gray-300 shadow hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-full text-sm px-5 py-2.5 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700 focus:shadow"
+          >
+            Counter <span id="counterValue">(0)</span>
+          </button>
         </div>
       </div>
     </main>
